2010-07-17 [ticho]	0.27.0cvs7

	* src/feed.c
	* src/parsers.c
	* src/strreplace.c
	* src/strreplace.h
		Strip newlines in fields where necessary (subject, links, ...)

2010-07-15 [ticho]	0.27.0cvs6

	* src/parsers.c
		Require mandatory Atom entry elements, discard an entry otherwise.

2010-07-15 [ticho]	0.27.0cvs5

	* src/strreplace.c
		Do not discard newline characters from item bodies. Fixes bug #2226,
		reported by Anna Z.

2010-05-09 [ticho]	0.27.0cvs4

	* src/feed.c
		Check presence of timestamp on newly parsed feed item, not on our
		stored item.

2010-05-07 [ticho]	0.27.0cvs3

	* src/feed.c
	* src/parsers.c
		Fix logic error in comparing non-Atom feed item dates.

2010-05-05 [ticho]	0.27.0cvs2

	* src/feed.c
		Allow all curl-supported HTTP encodings - currently identity, gzip
		and deflate (zlib)

2010-05-04 [colin]	0.27.0cvs1

	* src/claws.def
		Fix win32 build

2010-05-01 [paul]	0.27

	0.27 released

2010-04-30 [paul]	0.26.0cvs10

	* po/cs.po
	* po/de.po
	* po/fi.po
	* po/hu.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
		updated by David Vachulka, Stephan Sachse, Flammie Pirinen, Pader Rezso,
		Marcel Pol, Frederico Goncalves Guimaraes, Slavko

2010-04-14 [ticho]	0.26.0cvs9

	* src/feed.c
		Fix issue with incorrect comparing of mime-encoded titles.
		Fix corner case issue with different items with same title.

2010-04-14 [ticho]	0.26.0cvs8

	* src/parsers.c
		Read "author" tag, and prefer it over "dc:creator". Fixes bug #2164.
		Minor modifications of RDF and RSS tag matching.

2010-04-11 [ticho]	0.26.0cvs7

	* src/feed.c
		Improve feed item comparing algorithm to better cope with feeds
		with scarce item metadata.

2010-03-29 [ticho]	0.26.0cvs6

	* src/feed.c
	* src/feedprops.c
	* src/feedprops.h
	* src/rssyl.c
	* src/rssyl.h
	* src/rssyl_gtk.c
	* src/rssyl_gtk.h
		Add "silent_update" feed property, to allow for leaving changed items
		marked as read under certain conditions.

2010-03-23 [ticho]	0.26.0cvs5

	* src/feed.c
		Fix potential memory leak.