@@ -193,3 +193,4 @@
 ( cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/strreplace.c;  ) > 0.27.0cvs5.patchset
 ( cvs diff -u -r 1.1.2.30 -r 1.1.2.31 src/parsers.c;  ) > 0.27.0cvs6.patchset
 ( cvs diff -u -r 1.1.2.120 -r 1.1.2.121 src/feed.c;  cvs diff -u -r 1.1.2.31 -r 1.1.2.32 src/parsers.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/strreplace.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/strreplace.h;  ) > 0.27.0cvs7.patchset
+( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/rssyl_cb_gtk.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/rssyl_cb_gtk.h;  cvs diff -u -r 1.1.2.29 -r 1.1.2.30 src/rssyl_gtk.c;  ) > 0.27.0cvs8.patchset
