@@ -1,3 +1,11 @@
+2010-07-17 [ticho]	0.27.0cvs8
+
+	* src/rssyl_cb_gtk.c
+	* src/rssyl_cb_gtk.h
+	* src/rssyl_gtk.c
+		Disable the comment age spinbutton in feed properties if comment
+		fetching is disabled.
+
 2010-07-17 [ticho]	0.27.0cvs7
 
 	* src/feed.c
